tests/error/u8_shift_out_of_range.vow
// TEST: error-code ShiftCountOutOfRange
// TEST: stderr "shift count 8 is out of range for u8"
module U8ShiftOutOfRange

fn main() -> i32 {
    let byte: u8 = 1;
    let shifted: u8 = byte << 8;
    0
}
